crates/cli/tests/integration/snapshots/integration__snapshot_tests__compact_unused_enum_members_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: "lines.join(\"\\n\")"
---
unused-enum-member:src/enums.ts:8:Status.Deprecated
