crates/cli/tests/integration/snapshots/integration__snapshot_tests__compact_unused_exports_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: "lines.join(\"\\n\")"
---
unused-export:src/utils.ts:10:helperFn
unused-export:src/utils.ts:25:formatDate
