crates/cli/tests/integration/snapshots/integration__snapshot_tests__compact_unused_files_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: "lines.join(\"\\n\")"
---
unused-file:src/dead.ts
unused-file:src/orphan.ts
