crates/cli/tests/integration/snapshots/integration__snapshot_tests__compact_unused_types_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: "lines.join(\"\\n\")"
---
unused-type:src/types.ts:5:OldType
