crates/cli/tests/integration/snapshots/integration__snapshot_tests__compact_workspace_deps.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: "lines.join(\"\\n\")"
---
unused-dep:lodash
