crates/cli/tests/integration/snapshots/integration__snapshot_tests__json_circular_deps_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "kind": "dead-code",
  "schema_version": 9,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 1,
  "summary": {
    "total_issues": 1,
    "unused_files": 0,
    "unused_exports": 0,
    "unused_types": 0,
    "private_type_leaks": 0,
    "deprecated_exports_in_use": 0,
    "unused_dependencies": 0,
    "unused_enum_members": 0,
    "unused_class_members": 0,
    "unused_store_members": 0,
    "unprovided_injects": 0,
    "unrendered_components": 0,
    "unused_component_props": 0,
    "unused_component_emits": 0,
    "unused_component_inputs": 0,
    "unused_component_outputs": 0,
    "unused_svelte_events": 0,
    "unused_server_actions": 0,
    "unused_load_data_keys": 0,
    "unresolved_imports": 0,
    "unlisted_dependencies": 0,
    "duplicate_exports": 0,
    "type_only_dependencies": 0,
    "test_only_dependencies": 0,
    "dev_dependencies_in_production": 0,
    "circular_dependencies": 1,
    "re_export_cycles": 0,
    "package_cycles": 0,
    "boundary_violations": 0,
    "boundary_coverage_violations": 0,
    "boundary_call_violations": 0,
    "policy_violations": 0,
    "stale_suppressions": 0,
    "unused_catalog_entries": 0,
    "empty_catalog_groups": 0,
    "unresolved_catalog_references": 0,
    "unused_dependency_overrides": 0,
    "misconfigured_dependency_overrides": 0,
    "invalid_client_exports": 0,
    "mixed_client_server_barrels": 0,
    "misplaced_directives": 0,
    "route_collisions": 0,
    "dynamic_segment_name_conflicts": 0
  },
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "private_type_leaks": [],
  "deprecated_exports_in_use": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_optional_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "test_only_dependencies": [],
  "dev_dependencies_in_production": [],
  "circular_dependencies": [
    {
      "files": [
        "src/a.ts",
        "src/b.ts"
      ],
      "length": 2,
      "line": 3,
      "col": 0,
      "edges": [],
      "actions": [
        {
          "type": "refactor-cycle",
          "auto_fixable": false,
          "description": "Extract shared logic into a separate module to break the cycle",
          "note": "Circular imports can cause initialization issues and make code harder to reason about"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the line",
          "comment": "// fallow-ignore-next-line circular-dependency"
        }
      ]
    }
  ],
  "re_export_cycles": [],
  "package_cycles": [],
  "boundary_violations": [],
  "boundary_coverage_violations": [],
  "boundary_call_violations": [],
  "policy_violations": [],
  "stale_suppressions": [],
  "unused_catalog_entries": [],
  "empty_catalog_groups": [],
  "unresolved_catalog_references": [],
  "unused_dependency_overrides": [],
  "misconfigured_dependency_overrides": [],
  "invalid_client_exports": [],
  "mixed_client_server_barrels": [],
  "misplaced_directives": [],
  "route_collisions": [],
  "dynamic_segment_name_conflicts": []
}
